[project]
name = "petawawa-preprocessing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
  "pandas==2.2.3",
  "geopandas==1.0.1",
  "notebook==7.4.1",
  "matplotlib==3.10.1",
  "geopandas==1.0.1",
  "ipywidgets==8.1.6",
  "folium==0.19.5",
  "mapclassify==2.8.1",
  "openpyxl==3.1.5",
  ]
